# waveshare2-

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  buttons.c  buttons.h  garden_status.c  garden_status.h  idf_component.yml  lvgl_display.c  screen_watcher.c  screen_watcher.h
main/lvglui/: actions.h  eez-flow.cpp  eez-flow.h  images.c  images.h  screens.c  screens.h  ui.c  ui.h  ui_image_battery.c  ui_image_calender.c  ui_image_camera.c  ui_image_clock.c  ui_image_garden.c  ui_image_moon.c  ui_image_music.c  ui_image_setting.c  ui_image_stopwatch.c  ui_image_walking.c  vars.h
